update mockup_spmodel3d.ini with : spirial+thickdisk objects; different options for keyword "rcProf"

--- a/input/mockup_spmodel3d.ini
+++ b/input/mockup_spmodel3d.ini
@@ -6,7 +6,6 @@ object      =        'gn20'
 vsys        =        0*u.km/u.s
 
 vrot_rpcorr  =       True
-rcProf        =      ('tanh',300*u.km/u.s,10*u.kpc)
 vRadial       =      -60*u.km/u.s
 vSigma        =      +60*u.km/u.s
 restfreq      =      230.53800000*u.GHz
@@ -27,6 +26,8 @@ inc         =        20.06*u.deg
 sbProf        =      ('sersic2d',7*u.kpc,0.8)
 vbProf        =      ('sech',1*u.kpc)
 
+rcProf        =      ('tanh',300*u.km/u.s,2*u.kpc)
+
 ################################################################################
 [co21disk2]
 ################################################################################
@@ -43,8 +44,10 @@ inc         =        80.06*u.deg
 sbProf        =      ('sersic2d',40*u.kpc,0.8)
 vbProf        =      ('sech',1*u.kpc)
 
+rcProf        =      ('rho : minimum(rho/p2,1.0)*p1',400*u.km/u.s,5*u.kpc)
+
 ################################################################################
-[contdisk1]
+[co21disk3]
 ################################################################################
 
 type          =      'disk3d'
@@ -52,9 +55,58 @@ import        =      'basics'
 z           =        4.06
 xypos       =        (189.2933333+0*40/3600,62.3711111+1*15/3600)
 
-contflux     =       (0.0001 * u.Unit('Jy'),20* u.Unit('GHz'),8.0)
+lineflux     =       4.0*u.Jy*u.km/u.s
 pa          =        70.00*u.deg
-inc         =        30.06*u.deg
+inc         =        60.00*u.deg
 
 sbProf        =      ('sersic2d',40*u.kpc,0.8)
 vbProf        =      ('sech',1*u.kpc)
+
+rcProf        =      ('tanh',300*u.km/u.s,10*u.kpc)
+
+rotAz        =       ('log',0*u.kpc,20*u.kpc,270*u.deg,5*u.kpc)
+sbQ          =       0.3
+
+
+################################################################################
+[contdisk3]
+################################################################################
+
+type          =      'disk3d'
+import        =      'basics'
+z           =        4.06
+xypos       =        (189.2933333+0*40/3600,62.3711111+1*15/3600)
+
+contflux     =       (0.00001 * u.Unit('Jy'),20* u.Unit('GHz'),8.0)
+pa          =        70.00*u.deg
+inc         =        60.00*u.deg
+
+sbProf        =      ('sersic2d',40*u.kpc,0.8)
+vbProf        =      ('sech',1*u.kpc)
+
+rcProf        =      ('tanh',300*u.km/u.s,10*u.kpc)
+
+rotAz        =       ('log',0*u.kpc,20*u.kpc,270*u.deg,5*u.kpc)
+sbQ          =       0.3
+
+
+################################################################################
+[contdisk4] # similar to contdisk3 except disk thickness and orientation
+################################################################################
+
+type          =      'disk3d'
+import        =      'basics'
+z           =        4.06
+xypos       =        (189.2933333-1*40/3600,62.3711111+0*15/3600)
+
+contflux     =       (0.00001 * u.Unit('Jy'),20* u.Unit('GHz'),8.0)
+pa          =        -20.00*u.deg
+inc         =        60.00*u.deg
+
+sbProf        =      ('sersic2d',40*u.kpc,0.8)
+vbProf        =      ('sech',5*u.kpc)
+
+rcProf        =      ('tanh',300*u.km/u.s,10*u.kpc)
+
+rotAz        =       ('log',0*u.kpc,20*u.kpc,270*u.deg,5*u.kpc)
+sbQ          =       0.3
