add a new "lens" section in mockup_spmodel3d.ini; update demo_api_lens.ipynb

--- a/input/mockup_spmodel3d.ini
+++ b/input/mockup_spmodel3d.ini
@@ -110,3 +110,11 @@ rcProf        =      ('tanh',300*u.km/u.s,10*u.kpc)
 
 rotAz        =       ('log',0*u.kpc,20*u.kpc,270*u.deg,5*u.kpc)
 sbQ          =       0.3
+
+################################################################################
+[sie1] # lense model specification  
+################################################################################
+
+type        = 'lens'
+xypos       =        '12h37m11.89s +62d22m11.8s'
+lsProf      =  ('sie',10*u.arcsec,0.5,70*u.deg)
